@@ -129,6 +129,11 @@ class PMA_Theme_Manager {
         if ($this->_themes_path != trim($GLOBALS['cfg']['ThemePath'])
          || $this->theme_default != $GLOBALS['cfg']['ThemeDefault']) {
             $this->init();
+        } else {
+            // at least the theme path needs to be checked every time for new
+            // themes, as there is no other way at the moment to keep track of
+            // new or removed themes
+            $this->loadThemes();
         }
     }
 
