@@ -10,6 +10,7 @@ $Source$
       updated themes;
       fixed bug #1452131 Fonts too large;
       fixed bug #1446211 Colors hardcoded in theme css files;
+    * libraries/Theme_Manager.class.php: search themes on every script start
 
 2006-04-25 Michal Čihař  <michal@cihar.com>
     * libraries/common.lib.php: Make cookie login form work with token
